Fixed game info overflow issues

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -596,3 +596,8 @@ button:focus {
     color: var(--muted-font);
     font-size: 0.9rem;
 }
+
+#game-info-window {
+    overflow-y: auto;
+    flex-direction: row;
+}
